# fastapi_epiccakes

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env  Dockerfile  alembic.ini  config.py  main.py
backend/api/auth/: auth.py  user.py
backend/api/sqladmin/: views.py
backend/db/: db.py
backend/migrations/: env.py
backend/models/: auth.py  base.py  enums.py  store.py
backend/repositories/: store.py  user.py
backend/schemas/: auth.py  base.py  store.py
backend/utils/: auth.py  depends.py  repository.py  validators.py
bot/: .env  Dockerfile  main.py
bot/core/: commands.py  db.py  keyboards.py
devops/: default.conf  prometheus.yml
migrations/: env.py
migrations/versions/: 1c940617fa02_init.py  862cd0525a72_init.py  900ad46b1194_init.py
nginx/: default.conf
src/: .env  main.py  sqlite.db
src/api/: routers.py  views.py
src/db/: db.py
src/migrations/: env.py
src/models/: auth.py  store.py
src/repositories/: store.py  user.py
src/schemas/: store.py
src/utils/: auth.py  depends.py  repository.py  validators.py
src/views/: sqladmin.py
tests/: conftest.py  test_auth.py  test_category.py  test_client.py  test_client_managers.py  test_customer.py  test_customer_managers.py  test_image.py  test_manufacturer.py  test_manufacturer_managers.py  test_order.py  test_product.py  test_review.py  test_sqladmin.py  test_staff_managers.py  test_user.py
tests/backend/: test_customer.py  test_customer_managers.py  test_image.py  test_manufacturer_managers.py  test_order.py
web/: default.conf
(+57 files in other folders)
