[tool.poetry]
name = "fastapi_epiccakes"
version = "0.1.0"
description = ""
authors = ["StefanEpic"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}
alembic = "^1.12.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
sqladmin = "^0.14.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
asyncpg = "^0.28.0"
gunicorn = "^21.2.0"
passlib = "^1.7.4"
sentry-sdk = {extras = ["fastapi"], version = "^1.30.0"}
prometheus-fastapi-instrumentator = "^6.1.0"
aiogram = "^3.0.0"

[tool.poetry.dev-dependencies]
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.21.1"
flake8 = "^6.1.0"
flake8-fastapi = "^0.7.0"
flake8-bugbear = "^23.7.10"
flake8-coding = "^1.3.2"
naming = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "backend"]
asyncio_mode = "auto"